--- a/src/peakrdl_python/templates/baseclass_tb.py.jinja
+++ b/src/peakrdl_python/templates/baseclass_tb.py.jinja
@@ -30,25 +30,25 @@ import unittest
 {% endif %}
 
 
-from ..lib import RegisterWriteVerifyError
+from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}lib import RegisterWriteVerifyError
 {% if asyncoutput %}
-from ..lib import AsyncCallbackSet
+from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}lib import AsyncCallbackSet
 {% else %}
-from ..lib import NormalCallbackSet
+from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}lib import NormalCallbackSet
 {% endif %}
 
 
 from ..reg_model.{{top_node.type_name}} import {{top_node.type_name}}_cls
 {% if asyncoutput %}
-from ..sim_lib.dummy_callbacks import async_dummy_read as read_addr_space
-from ..sim_lib.dummy_callbacks import async_dummy_write as write_addr_space
-from ..sim_lib.dummy_callbacks import async_dummy_read_block as read_block_addr_space
-from ..sim_lib.dummy_callbacks import async_dummy_write_block as write_block_addr_space
+from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}sim_lib.dummy_callbacks import async_dummy_read as read_addr_space
+from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}sim_lib.dummy_callbacks import async_dummy_write as write_addr_space
+from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}sim_lib.dummy_callbacks import async_dummy_read_block as read_block_addr_space
+from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}sim_lib.dummy_callbacks import async_dummy_write_block as write_block_addr_space
 {% else %}
-from ..sim_lib.dummy_callbacks import dummy_read as read_addr_space
-from ..sim_lib.dummy_callbacks import dummy_write as write_addr_space
-from ..sim_lib.dummy_callbacks import dummy_read_block as read_block_addr_space
-from ..sim_lib.dummy_callbacks import dummy_write_block as write_block_addr_space
+from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}sim_lib.dummy_callbacks import dummy_read as read_addr_space
+from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}sim_lib.dummy_callbacks import dummy_write as write_addr_space
+from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}sim_lib.dummy_callbacks import dummy_read_block as read_block_addr_space
+from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}sim_lib.dummy_callbacks import dummy_write_block as write_block_addr_space
 {% endif %}
 
 {% if asyncoutput %}async {% endif %}def read_callback(addr: int, width: int, accesswidth: int) -> int:
