--- a/example/simulating_callbacks/chip_with_a_GPIO.rdl
+++ b/example/simulating_callbacks/chip_with_a_GPIO.rdl
@@ -18,6 +18,7 @@ addrmap mychip {
             sw=rw;
             hw=r;
             reset={GPIO_direction::dir_in}; };
+
         field GPIO_output_field_type {
             fieldwidth = 1;
             sw=rw;
@@ -27,12 +28,12 @@ addrmap mychip {
             name="GPIO Direction";
             desc="Register to set the direction of each GPIO pin";
             GPIO_direction_field_type PIN_0;
-        } GPIO_dir @ 0x4;
+        } GPIO_dir;
 
         reg {
             name="GPIO Set State";
             desc="Register to set the state of a GPIO Pin";
             GPIO_output_field_type PIN_0;
-        } GPIO_state @ 0x8;
+        } GPIO_state;
     } GPIO;
 };
